commiting changes made on ubuntu

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -80,3 +80,18 @@
   publisher={Vision},
   preview={wave-mechanics.gif}
 }
+
+@article{xiu2021fast,
+  title     = {Fast Multiqubit Gates through Simultaneous Two-Qubit Gates},
+  author    = {Gu, Xiu and Fern\'andez-Pend\'as, Jorge and Vikst\aa{}l, Pontus and Abad, Tahereh and Warren, Christopher and Bengtsson, Andreas and Tancredi, Giovanna and Shumeiko, Vitaly and Bylander, Jonas and Johansson, G\"oran and Kockum, Anton Frisk},
+  journal   = {PRX Quantum},
+  volume    = {2},
+  issue     = {4},
+  pages     = {040348},
+  numpages  = {28},
+  year      = {2021},
+  month     = {Dec},
+  publisher = {American Physical Society},
+  doi       = {10.1103/PRXQuantum.2.040348},
+  url       = {https://link.aps.org/doi/10.1103/PRXQuantum.2.040348}
+}
