--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,95 +3,74 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
-
 @article{xiu2021fast,
-  title     = {Fast Multiqubit Gates through Simultaneous Two-Qubit Gates},
-  author    = {Gu, Xiu and Fern\'andez-Pend\'as, Jorge and Vikst\aa{}l, Pontus and Abad, Tahereh and Warren, Christopher and Bengtsson, Andreas and Tancredi, Giovanna and Shumeiko, Vitaly and Bylander, Jonas and Johansson, G\"oran and Kockum, Anton Frisk},
-  journal   = {PRX Quantum},
-  volume    = {2},
-  issue     = {4},
-  pages     = {040348},
-  numpages  = {28},
-  year      = {2021},
-  month     = {Dec},
+  bibtex_show = {true},
+  selected = {true},
+  abbr = {PRX},
+  title = {Fast Multiqubit Gates through Simultaneous Two-Qubit Gates},
+  author = {Gu, Xiu and Fern\'andez-Pend\'as, Jorge and Vikst\aa{}l, Pontus and Abad, Tahereh and Warren, Christopher and Bengtsson, Andreas and Tancredi, Giovanna and Shumeiko, Vitaly and Bylander, Jonas and Johansson, G\"oran and Kockum, Anton Frisk},
+  journal = {PRX Quantum},
+  volume = {2},
+  issue = {4},
+  pages = {040348},
+  numpages = {28},
+  year = {2021},
   publisher = {American Physical Society},
-  doi       = {10.1103/PRXQuantum.2.040348},
-  url       = {https://link.aps.org/doi/10.1103/PRXQuantum.2.040348}
+  doi = {10.1103/PRXQuantum.2.040348},
+  url = {https://link.aps.org/doi/10.1103/PRXQuantum.2.040348},
+  html = {https://link.aps.org/doi/10.1103/PRXQuantum.2.040348},
+}
+
+@article{vikstal2020applying,
+  abbr = {PhysRev},
+	title = {Applying the Quantum Approximate Optimization Algorithm to the Tail Assignment Problem},
+	doi = {10.1103/PhysRevApplied.14.034009},
+	author = {Vikstål, Pontus and Grönkvist, Mattias and Svensson, Marika and Andersson, Martin and Johansson, Göran and Ferrini, Giulia},
+  journal = {Phys. Rev. Applied},
+  volume = {14},
+  issue = {3},
+  pages = {034009},
+  numpages = {12},
+  year = {2020},
+  publisher = {American Physical Society},
+}
+
+@article{bengtsson2020improved,
+  abbr = {PhysRev},
+  title = {Improved Success Probability with Greater Circuit Depth for the Quantum Approximate Optimization Algorithm},
+  author = {Bengtsson, Andreas and Vikst\aa{}l, Pontus and Warren, Christopher and Svensson, Marika and Gu, Xiu and Kockum, Anton Frisk and Krantz, Philip and Kri\ifmmode \check{z}\else \v{z}\fi{}an, Christian and Shiri, Daryoush and Svensson, Ida-Maria and Tancredi, Giovanna and Johansson, G\"oran and Delsing, Per and Ferrini, Giulia and Bylander, Jonas},
+  journal = {Phys. Rev. Applied},
+  volume = {14},
+  issue = {3},
+  pages = {034010},
+  numpages = {9},
+  year = {2020},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevApplied.14.034010},
+  url = {https://link.aps.org/doi/10.1103/PhysRevApplied.14.034010},
+  html = {https://link.aps.org/doi/10.1103/PhysRevApplied.14.034010},
+}
+
+
+@thesis{vikstal2020application,
+  abbr = {Thesis},
+	title = {Application of the quantum approximate optimization algorithm to combinatorial optimization problems},
+	url = {https://research.chalmers.se/en/publication/520988},
+  html = {https://research.chalmers.se/en/publication/520988},
+	institution = {Chalmers University of Technology},
+	type = {phdthesis},
+	author = {Vikstål, Pontus},
+	year = {2020},
+}
+
+@thesis{vikstal2018continuous,
+  abbr = {Thesis},
+	title = {Continuous-variable quantum annealing with superconducting circuits},
+	url = {http://urn.kb.se/resolve?urn=urn:nbn:se:liu:diva-151889},
+  html = {http://urn.kb.se/resolve?urn=urn:nbn:se:liu:diva-151889},
+	institution = {Linköping University},
+	type = {Masters Thesis},
+	author = {Vikstål, Pontus},
+	year = {2018},
 }
